--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<<html>
+<html>
 <head>
 	<title>BEC Museum | Brass Era Car Museum</title>
 
 <!--Style Sheets-->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300,400,600,600i,700,800" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lobster|Raleway:400,800" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
@@ -16,7 +16,9 @@
 		<div class="nav-wrapper">
 			<div class="row">
 				<div class="col-sm-6">
-					<h1>BEC Museum | Brass Era Car Museum</h1>
+					<div class="titlewrapper">
+						<h1>BEC Museum | Brass Era Car Museum</h1>
+					</div>
 				</div>
 				<div class="col-sm-6">
 					<ul>
@@ -27,31 +29,27 @@
 				</div>
 			</div>
 		</div>
-		<div class="banner">
-			<h2>Celebrating the Era of Racing Machines</h2>
-			<h3>Learn, share, and buy Brass Era Cars</h3>
-		</div>	
 	</div>
 </header>
 
-
+<div class="main">
+	<div class="banner">
+		<h2>Share and Trade Brass Era Cars</h2>
+	</div>	
+</div>
 
 <footer>
  	<div class="container">
  		<div class="footer-wrapper">
  			<div class="row">
- 				<div class="col-sm-4 address">
- 					<address>
- 						<h4>BEC Museum</h4>
- 					</address>
+ 				<div class="col-sm-4">
+ 						<h4>www.BECMuseum.com</h4>
 				</div>
 				<div class="col-sm-4 contact">
-
-					<h4 class="phone-number">805-728-5317</h4>
 					<h4 class="email">tenparry@yahoo.com</h4>
 				</div>
 				<div class="col-sm-4">
-
+					<h4 class="phone-number">805-728-5317</h4>
 				</div>
  			</div>
  		</div>
